# campello_widgets

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEBUGGING_TOOLS_PROPOSAL.md  IME_IMPLEMENTATION_PLAN.md  LICENSE  README.md  TODO.md  android.cmake  build.bat  build.sh  build_metal_shaders.sh  build_vulkan_shaders.sh  generate_wayland_protocols.py  graph_dependencies.sh  ios.cmake  linux.cmake  macos.cmake  run_cpp_tests_only.sh  run_fidelity_tests.bat  run_fidelity_tests.sh  run_macos_animated.sh  run_macos_animated_release.sh  run_macos_counter.sh  run_macos_counter_release.sh  run_macos_example.sh  run_macos_example_release.sh  run_macos_gestures.sh  run_macos_image.sh  run_macos_keyboard.sh  run_macos_listview.sh  run_macos_listview_release.sh  run_macos_menu_test.sh  run_macos_showcase.sh  run_macos_showcase_release.sh  run_macos_table_view.sh  run_macos_table_view_release.sh  run_macos_textfield.sh  (+4 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
dependencies/: campello_gpu.cmake  campello_image.cmake  campello_input.cmake  googletest.cmake  vector_math.cmake
docker/: Dockerfile  docker-compose.yml  docker_test.sh
examples/: CMakeLists.txt
examples/linux_hello/: CMakeLists.txt  main.cpp
examples/macos_animated/: CMakeLists.txt  main.mm
examples/macos_counter/: CMakeLists.txt  main.mm
examples/macos_gestures/: CMakeLists.txt  main.mm
examples/macos_hello/: CMakeLists.txt  main.mm
examples/macos_image/: CMakeLists.txt  Info.plist  main.mm
examples/macos_keyboard/: CMakeLists.txt  main.mm
examples/macos_listview/: CMakeLists.txt  main.mm
examples/macos_menu_test/: CMakeLists.txt  main.mm
examples/macos_showcase/: CMakeLists.txt  main.mm
examples/macos_table_view/: CMakeLists.txt  main.mm
examples/macos_textfield/: CMakeLists.txt  main.mm
examples/macos_tree_view/: CMakeLists.txt  main.mm
flutter_fidelity_tester/: README.md  README_GOLDENS.md  download_fonts.sh  generate_goldens.sh  generate_visual_goldens.dart  pubspec.yaml  run_with_fonts.sh
flutter_fidelity_tester/lib/: golden_generator.dart  render_tree_capture.dart
flutter_fidelity_tester/test/: fidelity_goldens_test.dart  visual_goldens_test.dart
inc/campello_widgets/: campello_widgets.hpp
memory/: MEMORY.md  feedback_dpr_math.md
protocols/: text-input-unstable-v3-client-protocol.h
shaders/metal/: widgets.air  widgets.metal  widgets.metallib
shaders/vulkan/: quad.frag  quad.vert  rect.frag  rect.vert
src/: campello_widgets_config.h.in
src/android/: android_text_rasterizer.cpp  android_text_rasterizer.hpp  http_client.cpp  platform_menu_delegate.cpp  run_app.cpp  vulkan_draw_backend.cpp  vulkan_draw_backend.hpp
src/diagnostics/: diagnosticable.cpp  widget_inspector.cpp
src/ios/: http_client.mm  platform_menu_delegate.mm  run_app.mm
src/linux/: http_client.cpp  ibus_ime.cpp  ibus_ime.hpp  linux_text_rasterizer.cpp  linux_text_rasterizer.hpp  platform_menu_delegate.cpp  run_app.cpp  vulkan_draw_backend.cpp  vulkan_draw_backend.hpp  wayland_runner.cpp
src/macos/: http_client.mm  metal_draw_backend.hpp  metal_draw_backend.mm  platform_menu_delegate.mm  run_app.mm
src/shaders/: metal_widgets.h  vulkan_widgets.h
src/testing/: fidelity.cpp  fidelity.hpp  gpu_visual_renderer.mm  gpu_visual_renderer_stub.cpp  visual_fidelity.cpp
src/ui/: animation_controller.cpp  campello_design_system.cpp  canvas.cpp  curved_animation.cpp  focus_manager.cpp  focus_node.cpp  frame_scheduler.cpp  image_cache.cpp  image_loader.cpp  image_provider.cpp  inline_span.cpp  key.cpp  paint_context.cpp  path.cpp  pointer_dispatcher.cpp  render_align.cpp  render_animated_size.cpp  render_aspect_ratio.cpp  render_backdrop_filter.cpp  render_box.cpp  render_clip_oval.cpp  render_clip_path.cpp  render_clip_rect.cpp  render_clip_rrect.cpp  render_colored_box.cpp  render_constrained_box.cpp  render_custom_paint.cpp  render_decorated_box.cpp  render_flex.cpp  render_focus.cpp  render_fractionally_sized_box.cpp  render_gesture_detector.cpp  render_grid_view.cpp  render_image.cpp  render_intrinsic_height.cpp  render_intrinsic_width.cpp  render_list_view.cpp  render_mouse_region.cpp  render_object.cpp  render_opacity.cpp  (+22 more)
src/widgets/: align.cpp  animated_align.cpp  animated_builder.cpp  animated_container.cpp  animated_opacity.cpp  animated_positioned.cpp  animated_size.cpp  animated_switcher.cpp  app_bar.cpp  aspect_ratio.cpp  backdrop_filter.cpp  button.cpp  card.cpp  checkbox.cpp  circular_progress_indicator.cpp  clip_oval.cpp  clip_path.cpp  clip_rect.cpp  clip_rrect.cpp  colored_box.cpp  constrained_box.cpp  container.cpp  debug_overlay_panel.cpp  decorated_box.cpp  dialog.cpp  divider.cpp  drag_manager.cpp  element.cpp  fade_transition.cpp  flex.cpp  floating_action_button.cpp  focus.cpp  fractionally_sized_box.cpp  gesture_detector.cpp  grid_view.cpp  image.cpp  image_widget.cpp  inherited_element.cpp  inherited_widget.cpp  intrinsic_height.cpp  (+59 more)
src/windows/: d3d_draw_backend.cpp  d3d_draw_backend.hpp  run_app.cpp  (+2 more)
tests/: CMakeLists.txt  FIDELITY_TESTING.md  FIDELITY_WORKFLOW.md
tests/goldens/: simple_column.json
tests/platform/: test_macos_platform_menu.mm
tests/universal/: test_box_constraints.cpp  test_design_system.cpp  test_drag_manager.cpp  test_fidelity.cpp  test_fidelity_canvas_api.cpp  test_fidelity_flutter_goldens.cpp  test_fidelity_image.cpp  test_logical_pixels.cpp  test_platform_menu_bar.cpp  test_render_align.cpp  test_render_aspect_ratio.cpp  test_render_clip.cpp  test_render_constrained_box.cpp  test_render_decorated_box.cpp  test_render_flex.cpp  test_render_fractionally_sized_box.cpp  test_render_intrinsic.cpp  test_render_list_view.cpp  test_render_padding.cpp  test_render_sized_box.cpp  test_render_text_field.cpp  test_render_wrap.cpp  test_rich_text.cpp  test_tabs_and_animated_switcher.cpp  test_text_editing_controller.cpp  test_theme.cpp  test_transform.cpp  test_visual_fidelity.cpp  test_visual_fidelity_image.cpp  test_visual_fidelity_image_real.cpp  visual_fidelity_helpers.hpp
tests/visual_fidelity/: README.md  analyze_differences.py
(+236 files in other folders)
